--- a/package.json
+++ b/package.json
@@ -14,24 +14,28 @@
   "bugs": {
     "url": "https://github.com/jonschlinkert/omit-empty/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/jonschlinkert/omit-empty/blob/master/LICENSE-MIT"
-    }
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/jonschlinkert/omit-empty/blob/master/LICENSE"
+  },
+  "files": [
+    "index.js"
   ],
   "main": "index.js",
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "mocha -R spec"
+    "test": "mocha"
+  },
+  "dependencies": {
+    "has-values": "^0.1.2",
+    "isobject": "^1.0.0",
+    "reduce-object": "^0.1.3"
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "^4.0.4",
-    "verb": ">= 0.2.6",
-    "verb-tag-jscomments": ">= 0.2.0"
+    "should": "^5.2.0"
   },
   "keywords": [
     "clear",
@@ -55,10 +59,5 @@
     "utilities",
     "utility",
     "value"
-  ],
-  "dependencies": {
-    "has-value": "^0.1.0",
-    "isobject": "^0.2.0",
-    "reduce-object": "^0.1.2"
-  }
+  ]
 }
