--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
     "test": "mocha"
   },
   "dependencies": {
-    "has-values": "^0.1.3",
+    "has-values": "^0.1.4",
     "is-date-object": "^1.0.1",
     "isobject": "^2.0.0",
     "reduce-object": "^0.1.3"
   },
   "devDependencies": {
     "gulp-format-md": "^0.1.7",
-    "mocha": "^2.4.5",
-    "should": "^8.2.2"
+    "mocha": "^2.4.5"
   },
   "keywords": [
     "clear",
