--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "dependencies": {
     "has-values": "^0.1.4",
-    "is-date-object": "^1.0.1",
-    "isobject": "^2.1.0",
+    "kind-of": "^3.0.3",
     "reduce-object": "^0.1.3"
   },
   "devDependencies": {
