--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 sudo: false
+os:
+  - linux
+  - osx
+  - windows
 language: node_js
 node_js:
-  - stable
+  - node
+  - '11'
+  - '10'
+  - '9'
+  - '8'
+  - '7'
+  - '6'
   - '5'
   - '4'
-  - '0.12'
-  - '0.10'
-matrix:
-  fast_finish: true
-  allow_failures:
-    - node_js: '0.10'
