--- a/package.json
+++ b/package.json
@@ -14,19 +14,17 @@
   ],
   "main": "index.js",
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
   "scripts": {
     "test": "mocha"
   },
   "dependencies": {
-    "has-values": "^0.1.4",
-    "kind-of": "^3.0.3",
-    "reduce-object": "^0.1.3"
+    "kind-of": "^6.0.2"
   },
   "devDependencies": {
-    "gulp-format-md": "^0.1.9",
-    "mocha": "^2.5.3"
+    "gulp-format-md": "^2.0.0",
+    "mocha": "^5.2.0"
   },
   "keywords": [
     "clear",
@@ -63,15 +61,11 @@
     ],
     "related": {
       "list": [
-        "for-in",
-        "for-own",
         "is-plain-object",
-        "reduce-object"
+        "isobject",
+        "kind-of"
       ]
     },
-    "reflinks": [
-      "verb"
-    ],
     "lint": {
       "reflinks": true
     }
